# extjson

./: PLAN.md  pyproject.toml
src/extjson/: __init__.py  codec.py  dates.py  schema.py  types.py
tests/: test_codec.py  test_dates.py  test_schema.py
